--- a/packages/geoview-core/public/templates/legend2.html
+++ b/packages/geoview-core/public/templates/legend2.html
@@ -358,7 +358,7 @@
 
         const legendOne = api
           .maps[mapIdOne]
-          .legend.createLegend({ layerIds: ['UC1-Layer1', 'UC1-Layer2', 'UC1-Layer3', 'UC1-Layer4', 'UC1-Layer5'] });
+          .legend2.createLegend({ layerIds: ['UC1-Layer1', 'UC1-Layer2', 'UC1-Layer3', 'UC1-Layer4', 'UC1-Layer5'] });
 
         // create new tab and add the LegendComponent to the footer tab
         ft1.createFooterTab({
@@ -372,7 +372,7 @@
         // import footerTabs from the core for the current map
         const { footerTabs: ft2 } = api.maps[mapIdTwo];
 
-        const legendTwo = api.maps[mapIdTwo].legend.createLegend({ layerIds: ['UC2-Layer1'] });
+        const legendTwo = api.maps[mapIdTwo].legend2.createLegend({ layerIds: ['UC2-Layer1'] });
 
         // create new tab and add the LegendComponent to the footer tab
         ft2.createFooterTab({
@@ -386,7 +386,7 @@
         // import footerTabs from the core for the current map
         const { footerTabs: ft3 } = api.maps[mapIdThree];
 
-        const legendThree = api.maps[mapIdThree].legend.createLegend({ layerIds: ['UC3-Layer1'] });
+        const legendThree = api.maps[mapIdThree].legend2.createLegend({ layerIds: ['UC3-Layer1'] });
 
         // create new tab and add the LegendComponent to the footer tab
         ft3.createFooterTab({
@@ -397,7 +397,7 @@
 
         // Legend in a panel
         const mapIdFour = 'UC4';
-        const legendFour = api.maps[mapIdFour].legend.createLegend({ layerIds: ['UC4Layer1-Root', 'UC4Layer2-msi'] });
+        const legendFour = api.maps[mapIdFour].legend2.createLegend({ layerIds: ['UC4Layer1-Root', 'UC4Layer2-msi'] });
         const button = {
           id: 'AppbarPanelButtonId',
           tooltip: 'Legend',
@@ -417,7 +417,7 @@
 
         const legendDiv = document.getElementById('legend-item-example');
         // TODO: The legend component does not render properly
-        const legendItemOutside = api.maps[mapIdFour].legend.createLegendItem({ layerId: 'UC4Layer2-msi' });
+        const legendItemOutside = api.maps[mapIdFour].legend2.createLegendItem({ layerId: 'UC4Layer2-msi' });
         const root = createRoot(legendDiv);
         root.render(legendItemOutside);
       });
