--- a/packages/geoview-core/public/templates/layers/geocore.html
+++ b/packages/geoview-core/public/templates/layers/geocore.html
@@ -97,8 +97,7 @@
                     'geocoreLayerName': { 'en': 'Commemorative Map' },
                     'listOfLayerEntryConfig': [
                       {
-                        'layerId': '0',
-                        'layerName': { 'en': 'Map' }
+                        'layerId': '0'
                       }
                     ]
                   },
@@ -107,8 +106,7 @@
                     'geocoreLayerName': { 'en': 'Marine Water Quality' },
                     'listOfLayerEntryConfig': [
                       {
-                        'layerId': '6',
-                        'layerName': { 'en': 'Map' }
+                        'layerId': '6'
                       }
                     ]
 
