--- a/packages/geoview-core/public/templates/package-details-panel.html
+++ b/packages/geoview-core/public/templates/package-details-panel.html
@@ -22,6 +22,7 @@
             <td><img class="header-logo" alt="logo" src="./img/Logo.png" /></td>
             <td class="header-title">
               <h1><strong>Package - Details Panel</strong></h1>
+              <h4><strong style="color: red;">The Details Panel Feature on This Page Is Deprecated</strong></h4>
             </td>
           </tr>
           <tr>
