--- a/packages/geoview-core/public/templates/raw-legend-2.html
+++ b/packages/geoview-core/public/templates/raw-legend-2.html
@@ -137,6 +137,7 @@
                   'en': 'https://maps-cartes.ec.gc.ca/arcgis/rest/services/CESI/MapServer'
                 },
                 'geoviewLayerType': 'esriFeature',
+                'initialSettings': { 'visible': 'yes' },
                 'listOfLayerEntryConfig': [
                   { 'layerId': '5' }
                 ]
@@ -201,7 +202,6 @@
     <button type="button" class="collapsible">Configuration Snippet</button>
     <pre id="UC1CS" class="panel"></pre>
 
-
     <script src="codedoc.js"></script>
     <script>
       // initialize cgpv and api events, a callback is optional, used if calling api's after the rendering is ready
@@ -221,9 +221,9 @@
         // import footerTabs from the core for the current map
         const { footerTabs: ft1 } = api.maps[mapIdOne];
 
-        const legendOne = api
-          .maps[mapIdOne]
-          .legend2.createLegend({ layerIds: ['UC1-Layer1', 'UC1-Layer2', 'UC1-Layer3', 'UC1-Layer4', 'UC1-Layer5', 'geojsonLYR5'] });
+        const legendOne = api.maps[mapIdOne].legend2.createLegend({
+          layerIds: ['UC1-Layer1', 'UC1-Layer2', 'UC1-Layer3', 'UC1-Layer4', 'UC1-Layer5', 'geojsonLYR5'],
+        });
 
         // create new tab and add the LegendComponent to the footer tab
         ft1.createFooterTab({
@@ -231,7 +231,6 @@
           label: 'New Legend',
           content: () => legendOne,
         });
-
       });
     </script>
   </body>
