--- a/packages/geoview-core/public/templates/test.html
+++ b/packages/geoview-core/public/templates/test.html
@@ -90,8 +90,7 @@
                         },
                         {
                           'layerId': 'CGSL.ETA_ICEC',
-                          'layerFilter': 'time = date \'2023-04-18T07:00:00-04:00\'',
-                          'layerName': { 'en': 'Ice Cover' }
+                          'layerFilter': 'time = date \'2023-04-18T07:00:00-04:00\''
                         }
                       ]
                     }
